# sad

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_experiments.py
configs/: default.yaml  smoke.yaml  two-category.yaml
outputs/: gpu-info.txt
outputs/ablation-main/: config.yaml  results_raw.csv  results_summary.csv  run_manifest.json
outputs/drift-main/: results_raw.csv  results_summary.csv  run_manifest.json
outputs/fewshot-main/: results_raw.csv  results_summary.csv  run_manifest.json
outputs/k-sweep-main/: results_raw.csv  results_summary.csv
outputs/smoke/: config.yaml  results_raw.csv  results_summary.csv  run_manifest.json
ppm_ad/: __init__.py  data.py  features.py  metrics.py  models.py  runner.py
tests/: test_models.py
